# agentic-coding-talk

./: .gitignore  AGENT.md  ENTIREIO.md  README.md  justfile
.claude/: settings.json
21/c597eea2fc/: metadata.json
21/c597eea2fc/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
2c/519be012f6/: metadata.json
2c/519be012f6/0/: content_hash.txt  full.jsonl  (+2 more)
32/7449fac735/: metadata.json
57/19bcdbe4e0/: metadata.json
79/93e9ccff81/: metadata.json
82/86b4cec8a6/: metadata.json
_plans/: 2026-03-18-slides-content-high-level.md  2026-03-18-slides-content-impl.md  2026-03-18-slides-skeleton-high-level.md  2026-03-18-slides-skeleton-impl.md  2026-03-19-logpipe-skeleton-high-level.md  2026-03-19-logpipe-skeleton-impl.md  2026-03-21-aggregate-stage-high-level.md  2026-03-21-aggregate-stage-impl.md  2026-03-21-querying-filtering-high-level.md  2026-03-21-querying-filtering-impl.md  2026-03-21-where-stage-extract-high-level.md  2026-03-21-where-stage-extract-impl.md  2026-03-21-window-stage-high-level.md  2026-03-21-window-stage-impl.md
a4/857240e33c/: metadata.json
ad/8baefe1610/: metadata.json
c0/39000de6b8/: metadata.json
e0/7ad4802fbd/: metadata.json
ef/7cc6a554a7/: metadata.json
ef/abe6a32710/: metadata.json
project/: ARCHITECTURE.md  README.md  pyproject.toml
project/logpipe/: __main__.py  cli.py  parser.py  query.py
project/logpipe/stages/: aggregate.py  where.py  window.py
project/tests/: conftest.py  test_aggregate.py  test_ingest.py  test_query.py  test_window.py
slides/: README.md  package-lock.json  package.json  slides.md
(+41 files in other folders)
